<resources>
    <string name="app_name">ListeFilm</string>

    <!-- Main Activity -->
    <string name="main_titre">Ma liste de film à voir !</string>
    <string name="main_consulterFilmList">Liste des films</string>
    <string name="main_consulterCertificateList">Liste des certificats</string>

    <!-- Film List Activity -->
    <string name="filmListe_ajout">Ajout</string>
    <string name="filmListe_supprTout">Suppr Tout</string>
    <string name="filmListe_asyncS">Async S</string>
    <string name="filmListe_asyncP">Async P</string>
    <string name="filmListe_threads">Threads</string>
    <string name="filmListe_handlerTR">Handler T-R</string>
    <string name="filmListe_handlerTM">Handler T-M</string>
    <string name="filmListe_pool">Pool</string>

    <!-- Cell Film List -->
    <string name="filmCell_titre">Titre</string>
    <string name="filmCell_realisateur">Réalisateur</string>
    <string name="filmCell_producteur">Producteur</string>
    <string name="filmCell_annee">Annee</string>
    <string name="filmCell_imgDescription">Ceci est une image de l\'affiche de film.</string>

    <!-- Certificate Liste Activity -->
    <string name="certificateListe_https">Insert HTTPS URL…</string>
    <string name="certificateListe_ajout">Ajout</string>
    <string name="certificateListe_check">Check</string>
    <string name="certificateListe_result">Result…</string>

    <!-- Cell Certificate List -->
    <string name="certificateCell_contenu">Contenu de certificat</string>

    <!-- Dialog Mot de passe -->
    <string name="dialog_password">Entrez votre mot de passe</string>
    <string name="dialog_validate">Valider</string>

    <!-- Dialog ID -->
    <string name="dialog_id">Entrez l\'ID IMDB du film</string>
    <string name="searchCell_titre">Titre</string>
    <string name="searchCell_imgDescription">Ceci est une image de l\'affiche du film</string>
    <string name="searchCell_imdbID">IMDB ID</string>
    <string name="searchCell_type">Type</string>
    <string name="searchCell_annee">Annee</string>

</resources>
