<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/img_affiche"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_weight="1"
        android:contentDescription="@string/searchCell_imgDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchCell_titre"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_annee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchCell_annee"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchCell_type"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchCell_imdbID"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>